--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ packages = [{include = "scraper_scrapy"}]
 python = "^3.10"
 scrapy = "^2.9.0"
 ipython = "^8.14.0"
+asyncpg = "^0.27.0"
+python-dotenv = "^1.0.0"
 
 
 [tool.poetry.group.dev.dependencies]
