--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ scrapy = "^2.9.0"
 ipython = "^8.14.0"
 asyncpg = "^0.27.0"
 python-dotenv = "^1.0.0"
+fake-useragent = "^1.1.3"
 
 
 [tool.poetry.group.dev.dependencies]
