--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ asyncpg = "^0.27.0"
 python-dotenv = "^1.0.0"
 fake-useragent = "^1.1.3"
 install = "^1.3.5"
+scrapy-splash = "^0.9.0"
 
 
 [tool.poetry.group.dev.dependencies]
