--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ python-dotenv = "^1.0.0"
 fake-useragent = "^1.1.3"
 install = "^1.3.5"
 scrapy-splash = "^0.9.0"
+scrapy-playwright = "^0.0.26"
 
 
 [tool.poetry.group.dev.dependencies]
