feat: implement logs, add new fields to database and default values if element is not found

--- a/playwright_amazon/Makefile
+++ b/playwright_amazon/Makefile
@@ -18,4 +18,4 @@ env:
 	cp .env.sample .env 
 
 scrap:
-	make db-migrate && scrapy crawl amazon_spider
+	make db-migrate && scrapy crawl amazon_spider -L ERROR
