--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ asyncpg = "^0.27.0"
 python-dotenv = "^1.0.0"
 fake-useragent = "^1.1.3"
 scrapy-playwright = "^0.0.26"
+psycopg2 = "^2.9.6"
 
 
 [tool.poetry.group.dev.dependencies]
