--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ python-dotenv = "^1.0.0"
 fake-useragent = "^1.1.3"
 scrapy-playwright = "^0.0.26"
 psycopg2 = "^2.9.6"
+psycopg = "^3.1.9"
 
 
 [tool.poetry.group.dev.dependencies]
