--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ fake-useragent = "^1.1.3"
 scrapy-playwright = "^0.0.26"
 psycopg2 = "^2.9.6"
 psycopg = "^3.1.9"
+beautifulsoup4 = "^4.12.2"
+aiohttp = "^3.8.4"
 
 
 [tool.poetry.group.dev.dependencies]
