--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,14 +9,11 @@ readme = "README.md"
 python = "^3.10"
 scrapy = "^2.9.0"
 ipython = "^8.14.0"
-asyncpg = "^0.28.0"
 python-dotenv = "^1.0.0"
 fake-useragent = "^1.1.3"
 scrapy-playwright = "^0.0.26"
-psycopg2 = "^2.9.6"
 psycopg = "^3.1.9"
-beautifulsoup4 = "^4.12.2"
-aiohttp = "^3.8.4"
+pika = "^1.3.2"
 
 
 [tool.poetry.group.dev.dependencies]
