--- a/amazon/compose.yml
+++ b/amazon/compose.yml
@@ -35,6 +35,26 @@ services:
       postgres:
         condition: service_healthy
 
+  rabbitmq:
+    image: rabbitmq:3.12-rc-alpine
+    container_name: rabbitmq
+    restart: on-failure
+    healthcheck:
+      start_period: 60s
+      timeout: 120s
+      interval: 30s
+      test: ifconfig | grep broadcast
+    env_file: .env
+    environment:
+      RABBITMQ_DEFAULT_USER: ${RABBITMQ_DEFAULT_USER}
+      RABBITMQ_DEFAULT_PASS: ${RABBITMQ_DEFAULT_PASS}
+    ports:
+      - 5672:5672
+      - 15672:15672
+    networks:
+      - local
+
+
 networks:
   local:
     name: local
