--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,9 @@ version = "0.1.0"
 description = "Scrapy is a scraper tool framework built in python."
 authors = ["guimassoqueto <gui.massoqueto@gmail.com>"]
 readme = "README.md"
+packages = [
+{include = "amazon/**/*.py"}
+]
 
 [tool.poetry.dependencies]
 python = "^3.10"
