--- a/amazon/.env.sample
+++ b/amazon/.env.sample
@@ -3,3 +3,7 @@ POSTGRES_DB="postgres"
 POSTGRES_USER="postgres"
 POSTGRES_PASSWORD="password"
 POSTGRES_HOST="localhost"
+RABBITMQ_DEFAULT_USER="user"
+RABBITMQ_DEFAULT_PASS="password"
+RABBITMQ_DEFAULT_HOST="localhost"
+RABBITMQ_MAIN_QUEUE="scrapy-soup"
