--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,8 @@ description = "Scrapy is a scraper tool framework built in python."
 authors = ["guimassoqueto <gui.massoqueto@gmail.com>"]
 readme = "README.md"
 packages = [
-{include = "amazon/amazon/**/*.py"}
+{include = "amazon/amazon/**/*.py"},
+{include = "settings.py"}
 ]
 
 [tool.poetry.dependencies]
