chore: update .env

--- a/.env.sample
+++ b/.env.sample
@@ -3,8 +3,9 @@ POSTGRES_DB="postgres"
 POSTGRES_USER="postgres"
 POSTGRES_PASSWORD="password"
 POSTGRES_HOST="localhost"
-MIGRATIONS_PATH="github://user:personal-access-token@owner/repo/path#ref"
+MIGRATIONS_PATH="github://guimassoqueto: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@guimassoqueto/db-migrations/migrations#main"
 RABBITMQ_DEFAULT_USER="user"
 RABBITMQ_DEFAULT_PASS="password"
 RABBITMQ_DEFAULT_HOST="localhost"
 RABBITMQ_MAIN_QUEUE="scrapy-soup"
+DEALS_PAGES=43
