--- a/.env.sample
+++ b/.env.sample
@@ -3,9 +3,9 @@ POSTGRES_DB="postgres"
 POSTGRES_USER="postgres"
 POSTGRES_PASSWORD="password"
 POSTGRES_HOST="localhost"
-MIGRATIONS_PATH="github://guimassoqueto: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@guimassoqueto/db-migrations/amazon-scraper#main"
+MIGRATIONS_PATH="github://<user>:<token>@guimassoqueto/db-migrations/scrap#main"
 RABBITMQ_DEFAULT_USER="user"
 RABBITMQ_DEFAULT_PASS="password"
 RABBITMQ_DEFAULT_HOST="localhost"
-RABBITMQ_MAIN_QUEUE="scrapy-soup"
+RABBITMQ_MAIN_QUEUE="scrapy-colly"
 DEALS_PAGES=43
