--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ fake-useragent = "^1.1.3"
 scrapy-playwright = "^0.0.26"
 psycopg = "^3.1.9"
 pika = "^1.3.2"
+selenium = "^4.10.0"
 
 
 [tool.poetry.group.dev.dependencies]
