build: update pyproject

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,10 +4,7 @@ version = "0.1.0"
 description = "Scrapy is a scraper tool framework built in python."
 authors = ["guimassoqueto <gui.massoqueto@gmail.com>"]
 readme = "README.md"
-packages = [
-{include = "amazon/amazon/**/*.py"},
-{include = amazon/*.py"}
-]
+packages = [{include = "amazon/**/*.py"}]
 
 [tool.poetry.dependencies]
 python = "^3.10"
