feat: add new environment variables

--- a/.env.sample
+++ b/.env.sample
@@ -2,6 +2,7 @@ POSTGRES_PORT=5432
 POSTGRES_DB="postgres"
 POSTGRES_USER="postgres"
 POSTGRES_PASSWORD="password"
+POSTGRES_TABLE_NAME="executions"
 POSTGRES_HOST="localhost"
 MIGRATIONS_PATH="github://<user>:<token>@guimassoqueto/db-migrations/scrap#main"
 RABBITMQ_DEFAULT_USER="user"
