feat: add new environment variable

--- a/.env.sample
+++ b/.env.sample
@@ -4,8 +4,8 @@ POSTGRES_USER="postgres"
 POSTGRES_PASSWORD="password"
 POSTGRES_TABLE_NAME="executions"
 POSTGRES_HOST="localhost"
-MIGRATIONS_PATH="github://<user>:<token>@guimassoqueto/db-migrations/scrap#main"
 RABBITMQ_DEFAULT_USER="user"
 RABBITMQ_DEFAULT_PASS="password"
 RABBITMQ_DEFAULT_HOST="localhost"
 RABBITMQ_MAIN_QUEUE="scrapy-colly"
+MAX_CONCURRENCY=32
