--- a/.env.sample
+++ b/.env.sample
@@ -7,5 +7,5 @@ POSTGRES_HOST="localhost"
 RABBITMQ_DEFAULT_USER="user"
 RABBITMQ_DEFAULT_PASS="password"
 RABBITMQ_DEFAULT_HOST="localhost"
-RABBITMQ_MAIN_QUEUE="scrapy-colly"
+RABBITMQ_SEND_QUEUE="amazon-colly"
 MAX_CONCURRENCY=32
