--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
-name = "scrap-amazon"
+name = "scrap-amazon-deals"
 version = "3.0.0"
-description = "Scrap Amazon"
+description = "Scrap Amazon Deals"
 authors = ["guimassoqueto <gui.massoqueto@gmail.com>"]
 readme = "README.md"
 packages = [
